src/main/java/com/example/crud/error/util/ErrorDescription.java
package com.example.crud.error.util;

public class ErrorDescription {

    private ErrorDescription() {
    }

    public static final String STUDENT_NOT_FOUND = "Student not Found: ";
}
